--- a/Assignment2/Task1/1_2_model.ipynb
+++ b/Assignment2/Task1/1_2_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 83,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,16 +81,26 @@
     "# Define the decision variables for hour\n",
     "@variable(model, p_DA[1:hours])\n",
     "@variable(model, delta[1:W,1:hours])\n",
+    "@variable(model, delta_up[1:W,1:hours])\n",
+    "@variable(model, delta_down[1:W,1:hours])\n",
     "\n",
     "# Define the objective function\n",
-    "@objective(model, Max, sum(1/W .*\n",
-    "(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "+ scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours))\n",
+    "@objective(model, Max, sum(1/W*(\n",
+    "        scenarios[i][hour,\"price\"] * p_DA[hour]\n",
+    "     + delta_up[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
+    "      - delta_down[i,hour] * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2)\n",
+    "      ) for i in 1:W, hour in 1:hours))\n",
     "\n",
     "# Define the constraints\n",
     "@constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
     "@constraint(model, [hour in 1:hours], p_DA[hour] >= 0)\n",
     "@constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == scenarios[i][hour,\"wind power\"] - p_DA[hour])\n",
+    "@constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == delta_up[i,hour] - delta_down[i,hour])\n",
+    "@constraint(model, [i in 1:W, hour in 1:hours], delta_down[i,hour] >= 0)\n",
+    "#@constraint(model, [i in 1:W, hour in 1:hours], delta_down[i,hour] <= p_DA[hour])\n",
+    "@constraint(model, [i in 1:W, hour in 1:hours], delta_up[i,hour] >= 0)\n",
+    "#@constraint(model, [i in 1:W, hour in 1:hours], delta_up[i,hour] + p_DA[hour] <= 200)\n",
+    "\n",
     "\n",
     "\n",
     "# Solve the optimization problem\n",
@@ -113,78 +123,70 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [],
    "source": [
     "println(\"Objective value: \", objective_value(model))\n",
     "println(\"p_DA: \", value.(p_DA))\n",
-    "println(\"delta: \", value.(delta))"
+    "println(\"delta: \", value.(delta))\n",
+    "println(\"delta_up: \", value.(delta_up))\n",
+    "println(\"delta_down: \", value.(delta_down))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "151705.65829751547"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "objective_value(model)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Initialize the DataFrame directly without dynamic column names\n",
     "result_df = DataFrame(hour = Int[], p_DA = Float64[])\n",
+    "#, delta = Float64[], delta_up = Float64[], delta_down = Float64[]\n",
     "\n",
-    "# make a table with the results\n",
+    "#make a table with the results\n",
+    "scenario = 1\n",
     "for hour in 1:hours\n",
     "    push!(result_df, [hour, value(p_DA[hour])])\n",
+    "    #, value(delta[scenario,hour]), value(delta_up[scenario,hour]), value(delta_down[scenario,hour])\n",
     "end\n",
     "\n",
-    "profit_df = DataFrame(scenario = Int[], profit = Float64[])\n",
-    "\n",
-    "for i in 1:W\n",
-    "    profit = 0\n",
-    "    for hour in 1:hours\n",
-    "        profit += (scenarios[i][hour,\"price\"] * value(p_DA[hour])\n",
-    "        + scenarios[i][hour,\"price\"] * value(delta[i, hour])*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"])))\n",
-    "    end\n",
-    "    push!(profit_df, [i, profit])\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "pretty_table(result_df, backend = Val(:latex))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "profit_df = DataFrame(scenario = Int[], profit = Float64[])\n",
+    "\n",
+    "for i in 1:W\n",
+    "    profit = 0\n",
+    "    for hour in 1:hours\n",
+    "        profit += (\n",
+    "            scenarios[i][hour,\"price\"] * value(p_DA[hour])\n",
+    "        + value(delta_up[i,hour]) * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*0.9 + (1-scenarios[i][hour,\"grid_excess\"])*1)\n",
+    "        - value(delta_down[i,hour]) * scenarios[i][hour,\"price\"] * (scenarios[i][hour,\"grid_excess\"]*1 + (1-scenarios[i][hour,\"grid_excess\"])*1.2)\n",
+    "        )\n",
+    "    end\n",
+    "    push!(profit_df, [i, profit])\n",
+    "end\n",
+    "\n",
+    "#return average of profit\n",
+    "println(\"Average profit: \", sum(profit_df[!,\"profit\"])/W)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "\"1_1_results/market_results_1_1.csv\""
+       "\"1_2_results/market_results_1_2.csv\""
       ]
      },
      "metadata": {},
@@ -192,8 +194,8 @@
     }
    ],
    "source": [
-    "CSV.write(\"1_1_results/profits_1_1.csv\", profit_df)\n",
-    "CSV.write(\"1_1_results/market_results_1_1.csv\", result_df)"
+    "CSV.write(\"1_2_results/profits_1_2.csv\", profit_df)\n",
+    "CSV.write(\"1_2_results/market_results_1_2.csv\", result_df)"
    ]
   }
  ],
