--- a/Assignment2/Task1/1_3_model_one_price.ipynb
+++ b/Assignment2/Task1/1_3_model_one_price.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,12 +12,13 @@
     "#Pkg.add(\"Gruobi\")\n",
     "#Pkg.add(\"DataFrames\")\n",
     "#Pkg.add(\"CSV\")\n",
-    "#Pkg.add(\"PyCall\")"
+    "# Pkg.add(\"PyPlot\")\n",
+    "# Pkg.add(\"PyCall\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,12 +26,15 @@
     "using DataFrames\n",
     "using CSV\n",
     "using PrettyTables\n",
-    "using Random"
+    "using Random\n",
+    "using Plots\n",
+    "# using PyPlot\n",
+    "# using PyCall"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,13 +56,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.95"
+       "Any[]"
       ]
      },
      "metadata": {},
@@ -78,105 +82,130 @@
     "    counter += 1\n",
     "end\n",
     "\n",
-    "beta = 0.99\n",
-    "alpha = 0.95"
+    "alpha = 0.99\n",
+    "betas = [0.5, 0.75, 0.9, 0.95, 0.99, 0.999, 0.9999, 0.99999]\n",
+    "objectiv_values = []\n",
+    "exp_profits = []\n",
+    "CVaR_values = []"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal solution found\n",
+      "Objective value: 154391.55537235324\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 2685.897074837732\n",
+      "Optimal solution found\n",
+      "Objective value: 155734.50390977206\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 4028.8456122565976\n",
+      "Optimal solution found\n",
+      "Objective value: 156540.27303222337\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 4834.614734707917\n",
+      "Optimal solution found\n",
+      "Objective value: 156808.86273970714\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 5103.20444219169\n",
+      "Optimal solution found\n",
+      "Objective value: 157023.7345056942\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 5318.076208178709\n",
+      "Optimal solution found\n",
+      "Objective value: 157072.08065304125\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 5366.422355525789\n",
+      "Optimal solution found\n",
+      "Objective value: 157076.91526777597\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 5371.256970260496\n",
+      "Optimal solution found\n",
+      "Objective value: 157077.39872924946\n",
+      "Expected profit: 151705.65829751402\n",
+      "CVaR: 5371.740431733967\n"
+     ]
+    }
+   ],
    "source": [
-    "# Create a new model with GLPK solver\n",
-    "model = Model(GLPK.Optimizer)\n",
+    "for beta in betas\n",
+    "    # Create a new model with GLPK solver\n",
+    "    model = Model(GLPK.Optimizer)\n",
     "\n",
-    "# Define the decision variables for hour\n",
-    "@variable(model, p_DA[1:hours])\n",
-    "@variable(model, delta[1:W,1:hours])\n",
-    "@variable(model, zeta)\n",
-    "@variable(model, eta[1:W] >= 0)\n",
+    "    # Define the decision variables for hour\n",
+    "    @variable(model, p_DA[1:hours])\n",
+    "    @variable(model, delta[1:W,1:hours])\n",
+    "    @variable(model, zeta)\n",
+    "    @variable(model, eta[1:W] >= 0)\n",
     "\n",
-    "# Define the objective function\n",
-    "@objective(model, Max, sum(1/W .*\n",
-    "(scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "+ scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
-    "+ beta  * (zeta - (1/(1-alpha)) * sum(1/W .* eta[i] for i in 1:W)))\n",
+    "    # Define the objective function\n",
+    "    @objective(model, Max, sum(1/W .*\n",
+    "    (scenarios[i][hour,\"price\"] * p_DA[hour]\n",
+    "    + scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
+    "    + beta  * (zeta - (1/(1-alpha)) * sum(1/W .* eta[i] for i in 1:W)))\n",
     "\n",
-    "# Define the constraints\n",
-    "@constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
-    "@constraint(model, [hour in 1:hours], p_DA[hour] >= 0)\n",
-    "@constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == scenarios[i][hour,\"wind power\"] - p_DA[hour])\n",
-    "@constraint(model, [i in 1:W], -sum((scenarios[i][hour,\"price\"] * p_DA[hour]\n",
-    "+ scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for hour in 1:hours) + zeta - eta[i] <= 0)\n",
+    "    # Define the constraints\n",
+    "    @constraint(model, [hour in 1:hours], p_DA[hour] <= 200)\n",
+    "    @constraint(model, [hour in 1:hours], p_DA[hour] >= 0)\n",
+    "    @constraint(model, [i in 1:W, hour in 1:hours], delta[i,hour] == scenarios[i][hour,\"wind power\"] - p_DA[hour])\n",
+    "    @constraint(model, [i in 1:W], -1 * sum((scenarios[i][hour,\"price\"] * p_DA[hour]\n",
+    "    + scenarios[i][hour,\"price\"] * delta[i, hour]*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for hour in 1:hours) + zeta - eta[i] <= 0)\n",
     "\n",
     "\n",
-    "# Solve the optimization problem\n",
-    "optimize!(model)\n",
+    "    # Solve the optimization problem\n",
+    "    optimize!(model)\n",
     "\n",
-    "exp_profit = sum(1/W .*\n",
-    "(scenarios[i][hour,\"price\"] * value.(p_DA[hour])\n",
-    "+ scenarios[i][hour,\"price\"] * value.(delta[i, hour])*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
+    "    exp_profit = sum(1/W .*\n",
+    "    (scenarios[i][hour,\"price\"] * value.(p_DA[hour])\n",
+    "    + scenarios[i][hour,\"price\"] * value.(delta[i, hour])*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"]))) for i in 1:W, hour in 1:hours)\n",
     "\n",
-    "CVaR = beta  * (zeta - (1/(1-alpha)) * sum(1/W .* eta[i] for i in 1:W))\n",
+    "    CVaR = beta  * (value.(zeta) - (1/(1-alpha)) * sum(1/W .* value.(eta[i]) for i in 1:W))\n",
     "\n",
-    "# Print the termination status\n",
-    "status = termination_status(model)\n",
-    "if status == MOI.OPTIMAL\n",
-    "    println(\"Optimal solution found\")\n",
-    "    \n",
-    "    # RETURN OBJECTIVE value\n",
-    "    println(\"Objective value: \", objective_value(model))\n",
-    "    println(\"Expected profit: \", exp_profit)\n",
-    "    println(\"CVaR: \", CVaR)\n",
-    "else\n",
-    "    println(\"No optimal solution found\")\n",
-    "end"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 65,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "println(\"p_DA: \", value.(p_DA))\n",
-    "println(\"delta: \", value.(delta))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the DataFrame directly without dynamic column names\n",
-    "result_df = DataFrame(hour = Int[], p_DA = Float64[])\n",
-    "\n",
-    "# make a table with the results\n",
-    "for hour in 1:hours\n",
-    "    push!(result_df, [hour, value(p_DA[hour])])\n",
-    "end\n",
-    "\n",
-    "profit_df = DataFrame(scenario = Int[], profit = Float64[])\n",
-    "\n",
-    "for i in 1:W\n",
-    "    profit = 0\n",
-    "    for hour in 1:hours\n",
-    "        profit += (scenarios[i][hour,\"price\"] * value(p_DA[hour])\n",
-    "        + scenarios[i][hour,\"price\"] * value(delta[i, hour])*((0.9.*scenarios[i][hour,\"grid_excess\"]) + 1.2.*(1-scenarios[i][hour,\"grid_excess\"])))\n",
+    "    # Print the termination status\n",
+    "    status = termination_status(model)\n",
+    "    if status == MOI.OPTIMAL\n",
+    "        println(\"Optimal solution found\")\n",
+    "        \n",
+    "        # RETURN OBJECTIVE value\n",
+    "        #println(\"Objective value: \", objective_value(model))\n",
+    "        #println(\"Expected profit: \", exp_profit)\n",
+    "        #println(\"CVaR: \", CVaR)\n",
+    "        push!(objectiv_values, objective_value(model))\n",
+    "        push!(exp_profits, exp_profit)\n",
+    "        push!(CVaR_values, CVaR)\n",
+    "    else\n",
+    "        println(\"No optimal solution found\")\n",
     "    end\n",
-    "    push!(profit_df, [i, profit])\n",
     "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"1_3_results/one_price_results.csv\""
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "pretty_table(result_df, backend = Val(:latex))"
+    "#make a dataframe with the results\n",
+    "results = DataFrame(betas = betas, objective_values = objectiv_values, exp_profits = exp_profits, CVaR_values = CVaR_values)\n",
+    "\n",
+    "#save the results\n",
+    "CSV.write(\"1_3_results/one_price_results.csv\", results)"
    ]
   }
  ],
